other/openldap/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: kube-ops
  labels:
    name: phpldapadmin
spec:
  ports:
    - name: phpldapadmin
      port: 80
      targetPort: 80
  selector:
    name: phpldapadmin
