other/openldap/phpldapadmin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpldapadmin-ingress
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ldap.xxx.com
    http:
      paths:
      - backend:
          serviceName: phpldapadmin
          servicePort: 80
